[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/resource_cards/whine.png" type="Texture" id=1]
[ext_resource path="res://assets/resource_cards/iron.png" type="Texture" id=2]
[ext_resource path="res://assets/resource_cards/bricc.png" type="Texture" id=3]
[ext_resource path="res://assets/resource_cards/wit.png" type="Texture" id=4]
[ext_resource path="res://assets/resource_cards/cloth.png" type="Texture" id=5]
[ext_resource path="res://game/map_creation/CityCard.gd" type="Script" id=6]
[ext_resource path="res://assets/Outline.shader" type="Shader" id=7]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 7 )
shader_param/width = 0.0
shader_param/outline_color = Color( 1, 1, 1, 0 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "Wine",
"speed": 0.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "Anvil",
"speed": 0.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "Food",
"speed": 0.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "Brick",
"speed": 0.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "Silk",
"speed": 0.0
} ]

[node name="CityCard" type="Node2D"]
position = Vector2( 0, -24 )
scale = Vector2( 0.35, 0.35 )
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
frames = SubResource( 2 )
animation = "Wine"

[node name="Area2D" type="Area2D" parent="."]
input_pickable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -72, 88, -72, -32, -64, -56, -40, -80, -24, -88, 0, -96, 24, -88, 40, -80, 64, -56, 72, -32, 72, 88 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
